--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head></head><body>An error has occurred. Redirecting you back to the main site.</body></html>
+<html><head></head><body>An error has occurred. Please <a href="https://Error404-1.github.io/BellTacoWeb">click here</a> to go back to the main page.</body></html>
